#3 update doc openapi + #10 custom configDataset
